@@ -1,0 +1,3 @@
+a.(0) = 42.000000
+b.(0) = 42.000000
+b.(0) = 42.000000
